--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="modals.css" rel="stylesheet" />
   <link href="searchbar.css" rel="stylesheet" />
   <link href="im.css" rel="stylesheet" />
-  <title>Report for tconnect made in Moon Modeler</title>
+  <title>T+Connect DB Model</title>
   <meta name="description" content="Moon Modeler - HTML report">
   <script>
 
